kubernetes/apps/network/external-service/ipmi/endpointslice.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-ipmi
  labels:
    kubernetes.io/service-name: internal-ipmi
addressType: IPv4
endpoints:
  - addresses:
      - ${IPMI_IP}
ports:
  - port: 443
    name: https
