kubernetes/apps/network/external-service/ipmi/httproute.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-ipmi
  labels:
    kubernetes.io/service-name: internal-ipmi
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.45
ports:
  - port: 443
    name: https
    protocol: TCP
  - port: 80
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: internal-ipmi
spec:
  ports:
    - port: 443
      targetPort: 443
      name: https
    - port: 80
      targetPort: 80
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ipmi-backend-policy
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: internal-ipmi
      namespace: network
  tls:
    verify: false
    alpnProtocols:
      - http/1.1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-service-httproute-ipmi
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - ipmi.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: internal-ipmi
          port: 443
