kubernetes/apps/network/external-service/ipmi/ingress.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &name internal-ipmi
  labels:
    kubernetes.io/service-name: *name
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.45
ports:
  - port: 443
    name: https
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: *name
spec:
  ports:
    - port: 443
      targetPort: 443
      name: https
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-ipmi
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: internal
  rules:
    - host: ipmi.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  number: 443
